Fix a crash when cancelling the OFX update dialog while waiting for operations that occur until the TransferJob is created. These operations can be things like waiting for KWallet, waiting for libofx_request_statement, etc.

BUG: 281728